# Aberration-Simulation

./: .gitignore  CURRENT_STATE.md  MODEL_EVOLUTION.md  README.md  STABLE_CHECKPOINT.txt  pyproject.toml  requirements.txt
colab_worker_logs/: active_12d_hole_search_expanded_cycle01_done.json  active_12d_hole_search_expanded_cycle02_done.json  active_12d_hole_search_expanded_cycle03_done.json  active_12d_hole_search_expanded_cycle04_done.json  active_12d_hole_search_expanded_synthesis_done.json  active_12d_hole_search_finalize.json  active_12d_hole_search_synthesis_done.json  active_12d_hole_search_v1_done.json  active_12d_hole_search_v1_inference_repair_pending.json  active_12d_hole_search_v2_focused_sparse_done.json  active_12d_hole_search_v3_high_amp_alignment_done.json  active_12d_hole_search_v4_dense_alignment_bridge_done.json  benchmark_suite_scoring_v1_done.json  benchmark_suite_scoring_v1_stage.json  colab_worker_cycle_01_20260606_023529_utc.json  colab_worker_cycle_01_20260606_024431_utc.json  colab_worker_cycle_01_20260606_025104_utc.json  colab_worker_cycle_01_20260606_025518_utc.json  colab_worker_cycle_01_20260606_030509_utc.json  colab_worker_cycle_01_20260606_032349_utc.json  colab_worker_cycle_01_20260606_081951_utc.json  colab_worker_cycle_01_20260606_093303_utc.json  colab_worker_cycle_01_20260606_102529_utc.json  colab_worker_cycle_01_20260606_215550_utc.json  colab_worker_cycle_01_20260607_044108_utc.json  colab_worker_cycle_01_20260607_045916_utc.json  colab_worker_cycle_01_20260609_045237_utc.json  colab_worker_cycle_01_20260609_051905_utc.json  (+399 more)
(+1111 files in other folders)
